--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="title_activity_main2">MainActivity2</string>
     <string name="title_activity_main3">MainActivity3</string>
     <string name="title_activity_add_cocktail">AddCocktail</string>
+    <string name="title_activity_ingredient">IngredientActivity</string>
 </resources>
